--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic/angular": "^6.1.9",
     "ionicons": "^6.0.3",
     "moment": "^2.29.4",
+    "ngx-socket-io": "^4.4.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
