--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.0",
     "@ionic/angular": "^6.1.9",
+    "angularx-qrcode": "^15.0.1",
     "ionicons": "^6.0.3",
     "moment": "^2.29.4",
     "ngx-socket-io": "^4.4.0",
     "rxjs": "~7.5.0",
+    "subsink": "^1.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
