--- a/package.json
+++ b/package.json
@@ -68,5 +68,5 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.8.4"
   },
-  "description": "An Ionic project"
+  "description": "WhatsApp utility messaging software"
 }
